--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Sen:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 
 </head>
 
