--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Senquenz, music, visualizer, Musik, Visualisierung, online, live, web, no download, disco, bar, ambiente, party, lights, Animationen, animations, Echtzeit, realtime">
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="../src/img/favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Sen:400,700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 
 </head>
 
-<body id="overflow">
+<body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 
