--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <title>Senquenz</title>
 
   <!-- information -->
-  <meta name="description" content="Experience music in a new way! Check out Senquenz, the online live music visualizer">
+  <meta name="description" content="Experience music in a new way! Check out Senquenz, the location-based real-time music visualizer">
   <meta name="author" content="David Kaipf">
-  <meta name="keywords" content="Senquenz, music, visualizer, Musik, Visualisierung, online, live, web, no download, disco, bar, ambiente, party, lights, Animationen, animations, Echtzeit, realtime">
+  <meta name="keywords" content="Senquenz, music, visualizer, Musik, Visualisierung, online, live, web, no download, disco, bar, ambiente, party, lights, Animationen, animations, Echtzeit, realtime, location, Standort">
 
   <!-- favicon -->
   <link rel="shortcut icon" href="favicon.png">
